--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
                 <div class="project-text">
                     <h2>Project 1</h2>
                     <p>
-                        Some text talking about this project so people know what is it and how cool it what I dont know but in what you want do like 5 - 6 sentences thats what I did for the one I did anyways have fun with it :)
+                        Some text talking about this project so people know what is it and how cool it what I dont know
+                        but in what you want do like 5 - 6 sentences thats what I did for the one I did anyways have fun
+                        with it :)
                     </p>
                 </div>
             </div>
         </div>
         <div class="horizontal-separator"></div>
-    <section class="projects">
         <div class="project">
             <div class="project-content">
                 <div class="project-text-right">
                     <h2>Project 2</h2>
                     <p>
-                        Some text talking about this project so people know what is it and how cool it what I dont know but in what you want do like 5 - 6 sentences thats what I did for the one I did anyways have fun with it :)
+                        Some text talking about this project so people know what is it and how cool it what I dont know
+                        but in what you want do like 5 - 6 sentences thats what I did for the one I did anyways have fun
+                        with it :)
                     </p>
                 </div>
                 <div class="separator"></div>
@@ -64,7 +67,9 @@
                 <div class="project-text">
                     <h2>Project 3</h2>
                     <p>
-                        Some text talking about this project so people know what is it and how cool it what I dont know but in what you want do like 5 - 6 sentences thats what I did for the one I did anyways have fun with it :)
+                        Some text talking about this project so people know what is it and how cool it what I dont know
+                        but in what you want do like 5 - 6 sentences thats what I did for the one I did anyways have fun
+                        with it :)
                     </p>
                 </div>
             </div>
