--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <footer>
         <p style="text-align: center; margin: 20px 0;">
             Copyright <a href="https://github.com/OddDevelopment/GlampPortfolio" target="_blank">GlampPortfolio</a> by
-            <a href="https://odd.gay" target="_blank">Odd</a>
+            <a href="https://odd.rip" target="_blank">Odd</a>
         </p>
     </footer>
 </body>
